# reflectloop-coach

./: .env.example  .gitignore
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  coach_prep.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/models/: __init__.py  coach_prep.py
backend/app/prompts/: coach_prep.md  coach_prep_refine.md
backend/app/services/: __init__.py  coach_prep_service.py  coaching_rubrics.json  coaching_rubrics.py  strategy_bank.json  strategy_bank.py
backend/app/services/llm/: __init__.py  base.py  factory.py  fireworks.py
backend/tests/: test_coach_prep_api.py  test_coach_prep_service.py  test_coaching_rubrics.py  test_strategy_bank.py
docs/: AGENT_INSTRUCTIONS.md  AI_BUILDER_PLAN.md  BUILD_PROCESS.md  BUILD_TRACKER.md  DECISION_LOG.md  DROID_CONTEXT.md  QUALITY_GATES.md  RELEASE_CHECKLIST.md  TalkMoveReferences.txt  deployment.md  overview.md  rubrics.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: coachPrep.ts
frontend/src/components/: CalibrationSection.tsx  CoachPrepForm.tsx  Collapsible.tsx  Field.tsx  OutputCards.tsx
frontend/src/types/: coachPrep.ts
